testing webrtc in browser

--- a/webrtc-app/src/App.css
+++ b/webrtc-app/src/App.css
@@ -7,6 +7,10 @@
   height: 80px;
 }
 
+.connect-buttons {
+  padding: 20px;
+}
+
 .App-header {
   background-color: #222;
   height: 150px;
@@ -23,6 +27,10 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
