updated webrtc app

--- a/webrtc-app/src/App.css
+++ b/webrtc-app/src/App.css
@@ -1,19 +1,4 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.connect-buttons {
-  padding: 10px;
-  display: flex;
-  align-content: center;
-}
-
-.App-header {
+.header {
   background: linear-gradient(#f52828, #f76b1c);
   color: #fff;
   height: 100px;
@@ -29,8 +14,22 @@
 .message-box {
   width: 100%;
 }
-.gen-message {
+
+.pk-box {
+  width: 45%;
+}
+
+.connect-with {
   display: flex;
+  padding: 10px;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.connect-buttons {
+  padding: 10px;
+  display: flex;
+  align-content: center;
 }
 
 .local-messages {
@@ -44,31 +43,22 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  width: 100%;
 }
 
 .qr-label {
   text-align: center;
   display: flex;
-  padding: 20px;
-  margin-left: -75px;
+  padding: 10px;
 }
 
 .qrcode {
-  width: 150px;
-  height: 150px;
+  width: 50px;
+  height: 50px;
   display: inline-block;
 }
 
 .App-intro {
   font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
