--- a/BrightID/android/app/src/main/res/values/styles.xml
+++ b/BrightID/android/app/src/main/res/values/styles.xml
@@ -6,4 +6,10 @@
         <item name="android:textColor">#000000</item>
     </style>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowBackground">@drawable/background_splash</item>
+    </style>
+
 </resources>
