--- a/BrightID/ios/BrightID/Base.lproj/LaunchScreenBrightID.xib
+++ b/BrightID/ios/BrightID/Base.lproj/LaunchScreenBrightID.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+    <device id="ipad10_5" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -14,7 +14,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="brightid-final" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I83-ab-tIl">
-                    <rect key="frame" x="122.66666666666669" y="184" width="235" height="112"/>
+                    <rect key="frame" x="122.5" y="184" width="235" height="112"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="112" id="D8T-SF-bzr"/>
                         <constraint firstAttribute="width" constant="235" id="bdd-8O-iyj"/>
