--- a/BrightID/android/app/src/main/res/values/colors.xml
+++ b/BrightID/android/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <resources>
     <color name="white">#ffffff</color>
     <color name="grey">#333</color>
+    <color name="orange">#ED7A5D</color>
 </resources>
