--- a/BrightID/android/app/src/main/res/values/styles.xml
+++ b/BrightID/android/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:navigationBarColor">@color/orange</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
