--- a/BrightID/android/app/src/main/res/values/styles.xml
+++ b/BrightID/android/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="android:navigationBarColor">@color/orange</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
