--- a/BrightID/android/app/src/main/res/values/styles.xml
+++ b/BrightID/android/app/src/main/res/values/styles.xml
@@ -3,15 +3,15 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:statusBarColor">@color/white</item>
         <item name="android:navigationBarColor">@color/orange</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
 
-    <style name="SplashTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <!-- Customize your theme here. -->
+    <!-- <style name="SplashTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/white</item>
         <item name="android:windowBackground">@drawable/background_splash</item>
-    </style>
+    </style> -->
 
 </resources>
